# customers-service

./: Cargo.toml  Dockerfile  schema.graphql
src/: data.rs  main.rs
